--- a/back/package.json
+++ b/back/package.json
@@ -15,11 +15,12 @@
     "@prisma/client": "^6.16.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "e": "^0.2.33",
     "express": "^5.1.0",
     "init": "^0.1.2",
-    "npx": "^10.2.2",
+    "npx": "^3.0.0",
     "prisma": "^6.16.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
